--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
                       placeholder="Company Name"
                       onKeyUp="lenderLegalCompanyHandler(event)"
                       id="lender-legal-company-1"
+                      name="lender-legal-company-1"
                       required
                     />
                     <p for="">Registered Address</p>
@@ -266,6 +267,7 @@
                       placeholder="Registered Address"
                       onKeyUp="lenderLegalAdressHandler(event)"
                       id="lender-legal-address-1"
+                      name="lender-legal-address-1"
                       required
                     />
                     <p for="">Registration Number</p>
@@ -274,14 +276,17 @@
                       placeholder="Registration Number"
                       onKeyUp="lenderLegalRegNumberHandler(event)"
                       id="lender-legal-regNumber-1"
+                      name="lender-legal-regNumber-1"
                       required
                     />
                     <p for="">Registration Country</p>
                     <select
                       onchange="lenderLegalCountryHandler(event)"
                       id="lender-legal-country-1"
+                      name="lender-legal-country-1"
                       required
                     >
+                      <option value="-1" selected disabled>Select</option>
                       <option value="Afganistan">Afghanistan</option>
                       <option value="Albania">Albania</option>
                       <option value="Algeria">Algeria</option>
@@ -302,6 +307,7 @@
                       placeholder="Defined as..."
                       onKeyUp="lenderLegalDefinedHandler(event)"
                       id="lender-legal-defined-1"
+                      name="lender-legal-defined-1"
                       required
                     />
                   </form>
@@ -312,6 +318,7 @@
                       placeholder="First name"
                       onKeyUp="lenderIndividualFirstnameHandler(event)"
                       id="lender-individual-firstname-1"
+                      name="lender-individual-firstname-1"
                       required
                     />
                     <p for="">Last name</p>
@@ -320,6 +327,7 @@
                       placeholder="Last Name"
                       onKeyUp="lenderIndividualLastnameHandler(event)"
                       id="lender-individual-lastname-1"
+                      name="lender-individual-lastname-1"
                       required
                     />
                     <p for="">Address</p>
@@ -328,6 +336,7 @@
                       placeholder="Address"
                       onKeyUp="lenderIndividualAddressHandler(event)"
                       id="lender-individual-address-1"
+                      name="lender-individual-address-1"
                       required
                     />
                     <p for="">Defined as..</p>
@@ -336,6 +345,7 @@
                       placeholder="Defined as.."
                       onKeyUp="lenderIndividualDefinedHandler(event)"
                       id="lender-individual-defined-1"
+                      name="lender-individual-defined-1"
                       required
                     />
                   </form>
