--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                     type="text"
                     onKeyUp="definitionInputHandler(event)"
                     id="definition-input-1"
-                    name="definition-input-1"
+                    name="definition-1"
                     placeholder="Definition"
                     required
                   />
@@ -536,7 +536,7 @@
                     type="text"
                     onKeyUp="definitionInputHandler(event)"
                     id="meaning-input-1"
-                    name="meaning-input-1"
+                    name="meaning-1"
                     placeholder="Meaning"
                     required
                   />
@@ -644,7 +644,14 @@
           </section>
           <!-- ------  5th Step ------ -->
           <section id="display-step-4" class="display-steps">
-            <div class="display-definition-inputs"></div>
+            <div class="display-definition-inputs">
+              <div class="form-text">
+                <div class="form-table">
+                  <p id="definition-1">INPUT Definition</p>
+                  <p id="meaning-1">INPUT Meaning</p>
+                </div>
+              </div>
+            </div>
           </section>
         </div>
       </div>
