--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                       name="borrower-legal-country-1"
                       required
                     >
-                      <option value="-1" selected disabled>Select</option>
-                      <option value="Afganistan">Afghanistan</option>
+                      <!-- <option value="-1" selected disabled>Select</option> -->
+                      <option value="Afganistan" selected>Afghanistan</option>
                       <option value="Albania">Albania</option>
                       <option value="Algeria">Algeria</option>
                       <option value="American Samoa">American Samoa</option>
