--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <!-- ------  2nd Step  -------  -->
             <section class="step-tab-panel" data-step="step2">
               <button class="lendoraddbtn" onclick="add_lendor_form()">
-                Add&nbsp;&nbsp;<i class="fa fa-plus"></i>
+                <i class="fa fa-plus"></i> &nbsp;Add
               </button>
               <div id="dynamic-lendor-forms">
                 <div id="form-div-1">
@@ -518,7 +518,7 @@
             <!-- ------  5th Step  -------- -->
             <section class="step-tab-panel" data-step="step5">
               <button class="definitionaddbtn" onclick="add_definition_form()">
-                Add&nbsp;&nbsp;<i class="fa fa-plus"></i>
+                <i class="fa fa-plus"></i>&nbsp;Add
               </button>
               <form id="dynamic-definition-form">
                 <div id="definition-form-1">
