--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
   <body>
     <div id="wrapper">
       <div class="steps-wrapper">
-        <div class="steps-header">
-          <!-- <button data-step-action="prev" class="step-btn">
-            <i class="far fa-arrow-alt-circle-left"></i>
-          </button> -->
-
-          <h1>Loan Agreement</h1>
-        </div>
+        <h1>Loan Agreement</h1>
         <div class="step-app" id="demo">
           <ul class="step-steps">
             <li data-step-target="step1">
@@ -553,7 +547,9 @@
 
           <!-- Step Footer -->
           <div class="step-footer">
-            <button data-step-action="prev" class="step-btn">Previous</button>
+            <button data-step-action="prev" class="step-btn back-btn">
+              <i class="far fa-arrow-alt-circle-left"></i>
+            </button>
             <button data-step-action="next" class="step-btn">Next</button>
             <button data-step-action="finish" class="step-btn">Finish</button>
           </div>
